--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
         implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 
 
 }
